<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#696969">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address"
                    android:padding="20dp"
                    android:hint="@string/add_hint"
                    android:layout_marginBottom="10dp"
                    android:background="#FFF5EE" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/sub_add_text"
                    android:onClick="buttonOnClickEnterAddress"
                    android:id="@+id/addressButton"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:layout_gravity="center_vertical|center_horizontal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addressText"
                    android:text="@string/no_add_entered"
                    android:textSize="30sp"
                    android:padding="20dp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:padding="20dp"
                    android:hint="@string/desc_hint"
                    android:background="#FFF5EE"
                    android:layout_marginBottom="10dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/sub_desc_text"
                    android:onClick="buttonOnClickEnterDescription"
                    android:id="@+id/descriptionButton"
                    android:padding="20dp"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"
                    android:layout_gravity="center_vertical|center_horizontal" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/descriptionText"
                    android:text="@string/no_desc_entered"
                    android:textSize="30sp"
                    android:padding="20dp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="buttonOnClickLocation"
                    android:padding="20dp"
                    android:text="@string/submit"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>